--- a/index.html
+++ b/index.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
-<html> 
+<html>
     <head>
         <meta charset="utf-8">
         <title>The Boba Festival</title>
         <link rel="stylesheet" href="css/normalize.css">
-        <link href="https://fonts.googleapis.com/css?family=Anton|Catamaran|Rouge+Script" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
         <link rel="stylesheet" href="css/main.css">
+        <!--<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">-->
     </head>
     <body>
         <header>
-            <a href="index.html" id="logo">
-                <h1>The Boba Festival</h1>
-            </a>
             <nav>
                 <ul>
+                    <li><a href="index.html">HOME</a></li>
                     <li><a href="about.html">ABOUT</a></li>
                     <li><a href="vendors.html">VENDORS</a></li>
                     <li><a href="volunteers.html">VOLUNTEERS</a></li>
@@ -23,6 +21,55 @@
                     <li><a href="contact.html">CONTACT</a></li>
                 </ul>
             </nav>
+            <!--
+            <style>
+                .mySlides {display: none}
+                .w3-left, .w3-right, .w3-badge {cursor: pointer}
+                .w3-badge {height: 13px; width: 13px; padding:0}
+            </style>
+            <div class="w3-content w3-display-container">
+                <img class="mySlides" src="Pictures/header1.jpg" style="width: 100%">
+                <img class="mySlides" src="Pictures/header2.jpg" style="width: 100%">
+                <img class="mySlides" src="Pictures/header3.jpg" style="width: 100%">
+                <div class="w3-center w3-container w3-section w3-large w3-text-white w3-display-bottommiddle" style="width: 100%">
+                    <div class="w3-left w3-hover-text-khaki" onclick="plusDivs(-1)">&#10094;</div>
+                    <div class="w3-right w3-hover-text-khaki" onclick="plusDivs(1)">&#10095;</div>
+                    <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(1)"></span>
+                    <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(2)"></span>
+                    <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(3)"></span>
+                </div>
+            </div>
+            <script>
+                var slideIndex = 1;
+                showDivs(slideIndex);
+                function plusDivs(n) 
+                {
+                    showDivs(slideIndex += n);
+                }
+                function currentDiv(n) 
+                {
+                    showDivs(slideIndex = n);
+                }
+                function showDivs(n) 
+                {
+                    var i;
+                    var x = document.getElementsByClassName("mySlides");
+                    var dots = document.getElementsByClassName("demo");
+                    if (n > x.length) {slideIndex = 1}    
+                    if (n < 1) {slideIndex = x.length}
+                    for (i = 0; i < x.length; i++) 
+                    {
+                        x[i].style.display = "none";  
+                    }
+                    for (i = 0; i < dots.length; i++) 
+                    {
+                        dots[i].className = dots[i].className.replace(" w3-white", "");
+                    }
+                    x[slideIndex-1].style.display = "block";  
+                    dots[slideIndex-1].className += " w3-white";
+                }
+            </script>
+            -->
         </header>  
         <div id="wrapper">
             <section>
