--- a/vendors.html
+++ b/vendors.html
@@ -4,17 +4,14 @@
         <meta charset="utf-8">
         <title>The Boba Festival</title>
         <link rel="stylesheet" href="css/normalize.css">
-        <link href="https://fonts.googleapis.com/css?family=Anton|Catamaran|Rouge+Script" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
         <header>
-            <a href="index.html" id="logo">
-                <h1>The Boba Festival</h1>
-            </a>
             <nav>
                 <ul>
+                    <li><a href="index.html">HOME</a></li>
                     <li><a href="about.html">ABOUT</a></li>
                     <li><a href="vendors.html">VENDORS</a></li>
                     <li><a href="volunteers.html">VOLUNTEERS</a></li>
