--- a/faq.html
+++ b/faq.html
@@ -5,6 +5,7 @@
         <title>The Boba Festival</title>
         <link rel="stylesheet" href="css/normalize.css">
         <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Oxygen" rel="stylesheet">
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
@@ -20,12 +21,15 @@
                     <li><a href="contact.html">CONTACT</a></li>
                 </ul>
             </nav>
+            <img src="Pictures/contact.jpg" style="width: 100%"> <!-- CHANGE feature photo -->
         </header>  
         <div id="wrapper">
             <section>
+                <h1>FREQUENTLY ASKED QUESTIONS</h1>
+                <h2>GENERAL INFORMATION</h2>
             </section>
             <footer>
-                <p>&copy; 2017 The Boba Festival</p>
+                <p>&copy; 2017 THE BOBA FESTIVAL</p>
             </footer>
         </div>
     </body>
