--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>The Boba Festival</title>
         <link rel="stylesheet" href="css/normalize.css">
         <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Oxygen" rel="stylesheet">
         <link rel="stylesheet" href="css/main.css">
         <!--<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">-->
     </head>
@@ -75,7 +76,7 @@
             <section>
             </section>
             <footer>
-                <p>&copy; 2017 The Boba Festival</p>
+                <p>&copy; 2017 THE BOBA FESTIVAL</p>
             </footer>
         </div>
     </body>
