--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
         <title>The Boba Festival</title>
         <link rel="stylesheet" href="css/normalize.css">
         <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Oxygen" rel="stylesheet">
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
@@ -20,7 +21,7 @@
                     <li><a href="contact.html">CONTACT</a></li>
                 </ul>
             </nav>
-            <img src="Pictures/contact.jpg" style="width: 100%">
+            <img src="Pictures/contact.jpg" style="width: 100%"> <!-- feature photo -->
         </header>  
         <div id="sectionWrapper">
             <section>
