--- a/faq.html
+++ b/faq.html
@@ -23,11 +23,19 @@
             </nav>
             <img src="Pictures/contact.jpg" style="width: 100%"> <!-- CHANGE feature photo -->
         </header>  
-        <div id="wrapper">
-            <section>
-                <h1>FREQUENTLY ASKED QUESTIONS</h1>
-                <h2>GENERAL INFORMATION</h2>
-            </section>
+        <div id="faqBackground">
+            <div id="faqWrapper">
+                <section>
+                    <h1>FREQUENTLY ASKED QUESTIONS</h1>
+                    <h2>Where have you been!? We thought you were an annual festival.</h2>
+                    <h3>We truly apologize for ...</h3>
+                    <h2>Where do the profits go?</h2>
+                    <h3>Half of the proceeds go to ...</h3>
+                    <h2>If you have any further questions, do not hesistate to reach out to us through our <a href="contact.html">contact</a> page.</h2>
+                </section>
+            </div>
+        </div>
+        <div id="footerWrapper">
             <footer>
                 <p>&copy; 2017 THE BOBA FESTIVAL</p>
             </footer>
