--- a/about.html
+++ b/about.html
@@ -25,8 +25,21 @@
         <div id="wrapper">
             <section>
             </section>
+        </div>
+        <div id="footerWrapper">
             <footer>
-                <p>&copy; 2017 THE BOBA FESTIVAL</p>
+                <div id="footerMiddle">
+                    <h8>- FOLLOW US -</h8>
+                    <div id="socialMedia">
+                            <ul id="socialSites">
+                                <li><a href="https://www.facebook.com/bobafestival" class="selected"><img src="pictures/fb2.png" alt="Facebook" style="width:40px;height:40px;"></a></li>
+                                <li><a href="https://www.instagram.com/bobafestival/" class="selected"><img src="pictures/ig2.png" alt="Instagram" style="width:40px;height:40px;"></a></li>
+                                <li><a href="https://twitter.com/bobafestival" class="selected"><img src="pictures/tw2.png" alt="Twitter" style="width:40px;height:40px;"></a></li>
+                                <li><a href="https://www.flickr.com/photos/bobafestival" class="selected"><img src="pictures/flkr2.png" alt="Flickr" style="width:40px;height:40px;"></a></li>
+                            </ul>
+                        </div><br>
+                    <h7>&copy; 2017 THE BOBA FESTIVAL</h7>
+                </div>
             </footer>
         </div>
     </body>
