Feature Photo pt.2

--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
                     <li><a href="contact.html">CONTACT</a></li>
                 </ul>
             </nav>
-            <img src="Pictures/contact.JPG" style="width: 100%"> <!-- feature photo -->
+            <img src="pictures/contact.jpg" style="width: 100%"> <!-- feature photo -->
         </header>  
         <div id="contactBackground">
             <div id="contactWrapper">
