--- a/gallery.html
+++ b/gallery.html
@@ -21,25 +21,43 @@
                     <li><a href="contact.html">CONTACT</a></li>
                 </ul>
             </nav>
+            <img src="pictures/contact.jpg" style="width: 100%"> <!-- feature photo -->
         </header>  
-        <div id="wrapper">
+        <div id="galleryWrapper">
             <section>
+                <div id="cp_widget_4b314193-6e28-4bc5-961d-154395485f07">...</div>
+                <script type="text/javascript">
+                    var cpo = []; cpo["_object"] ="cp_widget_4b314193-6e28-4bc5-961d-154395485f07"; cpo["_fid"] = "AYIAyBe81leE";
+                    var _cpmp = _cpmp || []; _cpmp.push(cpo);
+                    (function() { var cp = document.createElement("script"); cp.type = "text/javascript";
+                                 cp.async = true; cp.src = "//www.cincopa.com/media-platform/runtime/libasync.js";
+                                 var c = document.getElementsByTagName("script")[0];
+                                 c.parentNode.insertBefore(cp, c); })(); 
+                </script><noscript></noscript>
             </section>
         </div>
         <div id="footerWrapper">
             <footer>
+                <div id="footerLeft">
+                    <h8>- PLACEHOLDER -</h8>
+                </div>
                 <div id="footerMiddle">
                     <h8>- FOLLOW US -</h8>
                     <div id="socialMedia">
                             <ul id="socialSites">
-                                <li><a href="https://www.facebook.com/bobafestival" class="selected"><img src="pictures/fb2.png" alt="Facebook" style="width:40px;height:40px;"></a></li>
-                                <li><a href="https://www.instagram.com/bobafestival/" class="selected"><img src="pictures/ig2.png" alt="Instagram" style="width:40px;height:40px;"></a></li>
-                                <li><a href="https://twitter.com/bobafestival" class="selected"><img src="pictures/tw2.png" alt="Twitter" style="width:40px;height:40px;"></a></li>
-                                <li><a href="https://www.flickr.com/photos/bobafestival" class="selected"><img src="pictures/flkr2.png" alt="Flickr" style="width:40px;height:40px;"></a></li>
+                                <li><a href="https://www.facebook.com/bobafestival" class="selected"><img src="pictures/fb2.png" alt="Facebook" style="width:30px;height:30px;"></a></li>
+                                <li><a href="https://www.instagram.com/bobafestival" class="selected"><img src="pictures/ig2.png" alt="Instagram" style="width:30px;height:30px;"></a></li>
+                                <li><a href="https://twitter.com/bobafestival" class="selected"><img src="pictures/tw2.png" alt="Twitter" style="width:30px;height:30px;"></a></li>
+                                <li><a href="https://www.flickr.com/photos/bobafestival" class="selected"><img src="pictures/flkr2.png" alt="Flickr" style="width:30px;height:30px;"></a></li>
                             </ul>
                         </div><br>
                     <h7>&copy; 2017 THE BOBA FESTIVAL</h7>
                 </div>
+                <div id="footerRight">
+                    <h8>- GET IN TOUCH -</h8><br>
+                    <h9>info@officialbobafest.com</h9>
+                </div>
+                <br style="clear: left;" />
             </footer>
         </div>
     </body>
