--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                     <li><a href="contact.html">CONTACT</a></li>
                 </ul>
             </nav>
+            <img src="pictures/contact.jpg" style="width: 100%"> <!-- feature photo -->
             <!--
             <style>
                 .mySlides {display: none}
@@ -72,8 +73,9 @@
             </script>
             -->
         </header>  
-        <div id="wrapper">
+        <div id="homeWrapper">
             <section>
+                <h11>COMING OCTOBER 2018</h11>
             </section>
         </div>
         <div id="footerWrapper">
