--- a/faq.html
+++ b/faq.html
@@ -21,7 +21,7 @@
                     <li><a href="contact.html">CONTACT</a></li>
                 </ul>
             </nav>
-            <img src="pictures/contact.jpg" style="width: 100%"> <!-- CHANGE feature photo -->
+            <img src="pictures/contact.jpg" style="width: 100%"> <!-- feature photo -->
         </header>  
         <div id="faqBackground">
             <div id="faqWrapper">
