--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
                 <section>
                     <div id="leftSide">
                         <div class="container">  
-                            <form id="contact" action="index.php" method="post">
+                            <form method="post" action="index.php">
                                 <label for="name">NAME</label>
                                 <fieldset>
                                     <input name="name" placeholder="YOUR NAME" type="text" tabindex="1" required autofocus>
