--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,10 @@
         <div id="footerWrapper">
             <footer>
                 <div id="footerLeft">
-                    <h8>- PLACEHOLDER -</h8>
+                    <h8>- FESTIVAL INFORMATION -</h8><br>
+                    <h9>11:00 AM to 3:00 PM</h9><br>
+                    <h9>Saturday, October 13, 2018</h9><br>
+                    <h9>Santa Clara County Fairgrounds</h9>
                 </div>
                 <div id="footerMiddle">
                     <h8>- FOLLOW US -</h8>
