--- a/faq.html
+++ b/faq.html
@@ -57,7 +57,7 @@
                 </div>
                 <div id="footerRight">
                     <h8>- GET IN TOUCH -</h8><br>
-                    <h9>info@officialbobafest.com</h9>
+                    <h9><a href="mailto:info@officialbobafest.com">info@officialbobafest.com</a></h9>
                 </div>
                 <br style="clear: left;" />
             </footer>
