--- a/about.html
+++ b/about.html
@@ -26,7 +26,8 @@
         <div id="aboutWrapper">
             <section>
                 <h10>THE BOBA FESTIVAL STORY</h10><br>
-                <h10>MEET THE TEAM</h10>
+                <h10>MEET THE TEAM</h10><br>
+                <h10>A WORD FROM OUR SPONSORS</h10>
             </section>
         </div>
         <div id="footerWrapper">
