--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
             <section>
                 <h10>THE BOBA FESTIVAL STORY</h10><br>
                 <h10>MEET THE TEAM</h10><br>
-                <h10>A WORD FROM OUR SPONSORS</h10>
+                <h10>A WORD FROM OUR SPONSOR</h10>
             </section>
         </div>
         <div id="footerWrapper">
