--- a/faq.html
+++ b/faq.html
@@ -27,10 +27,14 @@
             <div id="faqWrapper">
                 <section>
                     <h1>FREQUENTLY ASKED QUESTIONS</h1>
+                    <h2>What is the Boba Festival?</h2>
+                    <h3>The Boba Festival is a non-profit event where boba shops from all over come to showcase their signature drinks. Guests will be able to purchase a ticket for unlimited access to milk tea samples. This event was founded in 2015 by three boba enthusiasts to bring the boba community together under one roof. We hope to give value to what it means to win the best boba awards. </h3>
                     <h2>Where have you been!? We thought you were an annual festival.</h2>
-                    <h3>We truly apologize for ...</h3>
+                    <h3>We truly apologize for the break that we took. It was a combination of having a small team and other priorities, so the Boba Festival kept on getting pushed aside. But now, we’re back with a bigger team, more time, and newer resources. Even though we weren’t able to make time to plan the event, the Boba Festival was always in the back of our minds. Every time we drank boba, we were reminded of how we let down the boba-loving community. We won’t let you down again!</h3>
                     <h2>Where do the profits go?</h2>
                     <h3>Half of the proceeds go to ...</h3>
+                    <h2>Can I sell my own tea/food/merchandise?</h2>
+                    <h3>At this moment, no. As we grow in the future, we would love for our vendors to be able to sell their own wares.</h3>
                     <h2>If you have any further questions, do not hesistate to reach out to us through our <a href="contact.html">contact</a> page.</h2>
                 </section>
             </div>
