--- a/faq.html
+++ b/faq.html
@@ -12,7 +12,11 @@
         <header>
             <nav>
                 <ul>
-                    <li><a href="index.html">HOME</a></li>
+                    <li>
+                        <div id="homeButton">
+                            <a href="index.html">THE BOBA FESTIVAL</a>
+                        </div>
+                    </li>
                     <li><a href="about.html">ABOUT</a></li>
                     <li><a href="vendors.html">VENDORS</a></li>
                     <li><a href="volunteers.html">VOLUNTEERS</a></li>
@@ -21,7 +25,7 @@
                     <li><a href="contact.html">CONTACT</a></li>
                 </ul>
             </nav>
-            <img src="pictures/faq.jpg" style="width: 100%"> <!-- feature photo -->
+            <img src="pictures/contact.jpg" style="width: 100%"> <!-- feature photo -->
         </header>  
         <div id="faqBackground">
             <div id="faqWrapper">
