--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
         <header>
             <nav>
                 <ul>
-                    <li><a href="index.html">HOME</a></li>
+                    <li>
+                        <div id="homeButton">
+                            <a href="index.html">THE BOBA FESTIVAL</a>
+                        </div>
+                    </li>
                     <li><a href="about.html">ABOUT</a></li>
                     <li><a href="vendors.html">VENDORS</a></li>
                     <li><a href="volunteers.html">VOLUNTEERS</a></li>
