--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
         </header>  
         <div id="aboutWrapper">
             <section>
-                <h10 style="text-align: center;">OUR SPONSOR</h10>
+                <h10>OUR SPONSOR</h10><br>
                 <img src="pictures/Fanale.png">
             </section>
         </div>
