Adjusted width of the fanale logo

--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
         <section>
             <h10>OUR SPONSOR</h10>
             <br>
-            <img src="pictures/Fanale.png">
+            <img class="fanalepic" src="pictures/Fanale.png">
         </section>
     </div>
     <footer style="background-color: #7dc4c8; padding-top: 15px;">
